Inserido o campo "nome" e realocado o arquivo activity do redefinir senha para pasta login.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Cardapio_Padoka</string>
 
     <!--Elementos comuns-->
+    <string name="nomeUsuario">Nome </string>
     <string name="email">E-mail</string>
     <string name="senha">Senha</string>
     <string name="voltar">Voltar</string>
